# apad-puzzle-rl

./: .gitignore  .pre-commit-config.yaml  04-14_solutions.py  MPPO_model_validate.ipynb  README.md  apad_DQN_train.ipynb  apad_MPPO_train.ipynb  apad_env.ipynb  apad_env.py  apad_env_validation.ipynb  backtracking.py  conda_env_test.ipynb  do_backtrack_solve.ipynb  environment.yml  explore_action_space.ipynb  hybrid_MPPO_train.ipynb  hybrid_env.py  make_expert_data.ipynb  model_test.ipynb  model_validate.ipynb  pyproject.toml  research_notes.md  sandbox.ipynb  test_apad_env.py  training_utils.py
DQN/: DQN_model_validate.ipynb  apad_DQN_train.ipynb
apad_puzzle_rl/: training_utils.py
apad_puzzle_rl/envs/: __init__.py  curriculum_env.py  hybrid_env.py
apad_puzzle_rl/resources/: solutions_4_14.py
apad_puzzle_rl/solver/: __init__.py  core.py  display.py  state.py
notebooks/: MPPO_model_validate.ipynb  model_comparison.ipynb  sandbox.ipynb  train_curriculum.ipynb  train_curriculum_2.ipynb
solver/: core.py  observers.py  state.py
