[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "apad-puzzle-rl"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["apad_puzzle_rl*"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "slow: marks tests as slow (run with -m slow)",
    "xfail: marks tests expected to fail",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
